--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ img {
 .project-link,
 .btn-submit {
   background-color: #7d73fc;
-  padding: 15px 15px;
+  padding: 0 15px;
   font-size: 12px;
   border: none;
   color: #fff;
@@ -331,7 +331,6 @@ textarea {
   border: none;
   padding: 15px 25px;
   color: #fff;
-  margin-top: 15px;
 }
 
 footer {
@@ -373,8 +372,12 @@ footer {
 }
 
 .input-form li {
-  margin-top: 13px;
+  margin-top: 10px;
   width: 100%;
+}
+
+.error-msg {
+  color: rgb(217, 255, 4);
 }
 
 @media only screen and (min-width: 600px) {
@@ -425,7 +428,7 @@ footer {
   }
 
   form ul li {
-    padding-bottom: 20px;
+    padding-bottom: 5px;
   }
 
   .nav-menu li {
