Fix linters errors

--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ img {
 .project-link,
 .btn-submit {
   background-color: #7d73fc;
-  padding: 0 15px;
+  padding: 15px 15px;
   font-size: 12px;
   border: none;
   color: #fff;
